Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4558

terminating the build takes five seconds on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.4.0
    • Qt Creator 2.2.0-beta, Qt Creator 2.3.0-beta
    • None
    • Windows

    Description

      Terminating the build takes five seconds on Windows.
      This is how we're trying to terminate the process:

      • We call QProcess::terminate() which sends WM_CLOSE to the windows of the process. This has basically no effect for console processes.
      • We're waiting five seconds.
      • We call QProcess::kill().

      On Windows, the first two steps are useless. We're always doing a useless wait and then kill our console process.

      What we should do instead is sending Ctrl-C to the child process.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-4558
          # Subject Branch Project Status CR V

          Activity

            People

              jbornema Joerg Bornemann
              jbornema Joerg Bornemann
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes