qtcbuildhelper for Windows added

This little tool sits between Qt Creator and the build tool (e.g. nmake)
and allows us to send Ctrl-C instead of terminating it the hard way.

Task-number: QTCREATORBUG-4558
Change-Id: I6c40c4cc9bf75cca3f2b744785b99bc146a3df4e
Reviewed-on: http://codereview.qt.nokia.com/2554
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@nokia.com>